Tweak layout for better mobile

--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
         <h2>Karate Kata - Feet Positions</h2>
     </div>
     <div class="row">
-        <div class="nine columns">
-            <canvas id="canvas" width="800" height="800"></canvas>
+        <div class="eight columns">
+            <canvas class="u-max-full-width" id="canvas" width="800" height="800"></canvas>
         </div>
-        <div class="three columns">
+        <div class="four columns">
             <div>
             <fieldset>
-                <b>Kata Selection</b>
+                <b>Kata Selection</b><br>
                 <select id="kata" onchange="kataChanged()">
                 <option value="taikyoku1">Taikyoku Sono Ichi / Ni (1 / 2)</option>
                 <!-- <option value="taikyoku3">Taikyoku Sono San (3)</option> -->
