--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
             </div>
             
             <div>
-            <button class="button-primary step-button" onclick="stepBeginning()"><i class="fa-solid fa-backward-fast"></i></button>
-            <button class="button-primary step-button" onclick="stepBack()"><i class="fa-solid fa-backward-step"></i></i></button>
-            <button class="button-primary step-button" onclick="stepForward()"><i class="fa-solid fa-forward-step"></i></button>
-            <button class="button-primary step-button" onclick="stepEnd()"><i class="fa-solid fa-forward-fast"></i></button>
+            <button id="step-beg" class="button-primary step-button" onclick="stepBeginning()"><i class="fa-solid fa-backward-fast"></i></button>
+            <button id="step-prev" class="button-primary step-button" onclick="stepBack()"><i class="fa-solid fa-backward-step"></i></i></button>
+            <button id="step-next" class="button-primary step-button" onclick="stepForward()"><i class="fa-solid fa-forward-step"></i></button>
+            <button id="step-end" class="button-primary step-button" onclick="stepEnd()"><i class="fa-solid fa-forward-fast"></i></button>
             </div>
 
             <br>
@@ -103,6 +103,30 @@
             draw();
         })
 
+        // keyboard controls for playback buttons
+        document.addEventListener("keyup", function(event) {
+            if (event.keyCode === 39) {
+                event.preventDefault();
+                document.getElementById("step-next").click();
+            } else if (event.keyCode === 37) {
+                event.preventDefault();
+                document.getElementById("step-prev").click();
+            } else if (event.keyCode === 38) {
+                event.preventDefault();
+                document.getElementById("step-beg").click();
+            } else if (event.keyCode === 40) {
+                event.preventDefault();
+                document.getElementById("step-end").click();
+            }
+        });
+        document.addEventListener("keydown", function(event) {
+            // prevent window scrolling when we use arrow keys
+            switch (event.keyCode) {
+                case 39, 37, 38, 40:
+                    event.preventDefault();
+                    break;
+            }
+        });
     });
 
     const N = [0, -1];
